--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,23 @@
 {
+    "peacock.remoteColor": "#95814a",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#b19c61",
-        "activityBar.background": "#b19c61",
+        "activityBar.activeBackground": "#da6d51",
+        "activityBar.background": "#da6d51",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#d4eae4",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#b19c61",
-        "statusBar.background": "#95814a",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#736339",
-        "statusBarItem.remoteBackground": "#95814a",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#95814a",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#95814a99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#166927",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#da6d51",
+        "statusBar.background": "#cd4c2b",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#da6d51",
+        "statusBarItem.remoteBackground": "#cd4c2b",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#cd4c2b",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#cd4c2b99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#95814a"
+    "peacock.color": "#cd4c2b"
 }
