--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,12 +3,17 @@
   "scripts": {
     "dev": "wrangler dev",
     "dev:remote": "wrangler dev --remote",
-    "deploy": "wrangler deploy --minify"
+    "deploy": "wrangler deploy --minify",
+    "format": "biome format --write ./src",
+    "lint": "biome lint ./src"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.15",
+    "@langchain/langgraph": "^0.2.18",
     "hono": "^4.6.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@cloudflare/workers-types": "^4.20240925.0",
     "wrangler": "3.83.0"
   }
