--- a/apps/langgraph/package.json
+++ b/apps/langgraph/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "api",
+  "name": "langgraph",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
-    "dev": "wrangler dev",
-    "dev:remote": "wrangler dev --remote",
-    "deploy": "wrangler deploy --minify",
     "format": "biome format --write ./src",
     "lint": "biome lint ./src"
   },
@@ -11,12 +10,12 @@
     "@langchain/core": "^0.3.15",
     "@langchain/langgraph": "^0.2.18",
     "@langchain/mistralai": "^0.1.1",
-    "hono": "^4.6.7",
+    "dotenv": "^16.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/workers-types": "^4.20240925.0",
-    "wrangler": "3.83.0"
+    "@tsconfig/recommended": "^1.0.7",
+    "@types/node": "^22.8.1"
   }
 }
