--- a/apps/langgraph/package.json
+++ b/apps/langgraph/package.json
@@ -10,6 +10,8 @@
     "@langchain/core": "^0.3.15",
     "@langchain/langgraph": "^0.2.18",
     "@langchain/mistralai": "^0.1.1",
+    "@langchain/openai": "^0.3.11",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "zod": "^3.23.8"
   },
