--- a/apps/langgraph/package.json
+++ b/apps/langgraph/package.json
@@ -13,7 +13,8 @@
     "@langchain/openai": "^0.3.11",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
