--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,7 @@
     "@langchain/core": "^0.3.15",
     "@langchain/langgraph": "^0.2.18",
     "@langchain/mistralai": "^0.1.1",
+    "@langchain/openai": "^0.3.11",
     "hono": "^4.6.7",
     "zod": "^3.23.8"
   },
