--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "@langchain/langgraph-checkpoint-sqlite": "^0.1.2",
     "@langchain/mistralai": "^0.1.1",
     "@langchain/openai": "^0.3.11",
+    "@libsql/client": "^0.14.0",
     "hono": "^4.6.7",
     "zod": "^3.23.8"
   },
